# sentiment-argument-mining

./: .gitignore  README.md  README.md_  argumentation.md  init.sh  pre_process_UNSC.py  pre_process_USElectionDebates.py  predict_UNSC.py  pyproject.toml  requirements.txt  train_USElectionDebates.py  vis.R
data/UNSC/: .gitignore  average_scores.csv  vaderiraq.csv
docs/: .#shankar_todos.org  .gitignore  arguments.md  bibliography.bib  bibtex.bib  sentiment.md  shankar_todos.md  shankar_todos.org  todos.md
docs/final_report/: main.tex  (+6 more)
hooks/: pre-commit.sample
src/: .gitignore  README.md  argumentation.md  eval_UNSC.py  gg.R  init.sh  pre_process.py  pre_process_UNSC.py  pre_process_USElectionDebates.py  pre_process_argumentation.py  pre_process_corpus.py  pre_process_us_election_debates.py  predict_UNSC.py  pyproject.toml  requirements.txt  sentiment.ipynb  tmp.py  train.py  train_USElectionDebates.py  train_argumentation.py  vis.R
src/aux/: requirements.txt  tmp.py  vis.py
src/data/UNSC/: .gitignore  core_std_scores.csv  iraqscores.csv
src/data/UNSC/pred/: .gitignore
src/data/UNSC/speeches/: .gitignore
src/data/USElection/: .gitignore
src/data/USElectionDebates/: .gitignore
src/data/pre-processed/task_1/char/: test.txt
src/data/pre-processed/task_1/text/: .gitignore
src/data/pre-processed/task_1/tokens/: .gitignore  test.txt  train.txt
src/docs/: argumentation.md
src/utils/: .#metrics_utils.py  adam_optimizer_v2.py  data_utils.py  grid.json  logging.conf  metrics_utils.py  model_utils.py  requirements.txt
utils/: model_utils.py
(+11 files in other folders)
