[tool.poetry]
name = "sentiment-arg-mining"
version = "0.1.0"
description = ""
authors = ["Atreya Shankar <35427332+atreyasha@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.7"
numpy = "^1.18.1"
nltk = "^3.4.5"
bert = "^2.2.0"
bert_for_Tf2 = "^0.13.5"
tqdm = "^4.43.0"
scikit_learn = "^0.22.2"
tensorflow-gpu = "^2.1.0"
sentencepiece = "^0.1.85"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
